<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="gameScoreScreen"
            type="com.mathsemilio.katakanalearner.ui.screens.score.GameScoreScreen" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.screens.score.GameScoreScreen">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_headline_final_score"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:text="@string/final_score"
                android:textAlignment="center"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.16"
                app:setFinalScoreText="@{gameScoreScreen.score}" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_headline_game_score"
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@{String.valueOf(gameScoreScreen.score)}"
                android:textColor="?android:textColorPrimary"
                app:layout_constraintEnd_toEndOf="@id/text_headline_final_score"
                app:layout_constraintStart_toStartOf="@id/text_headline_final_score"
                app:layout_constraintTop_toBottomOf="@id/text_headline_final_score"
                tools:text="24" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating_bar_game_score"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32dp"
                android:isIndicator="true"
                android:numStars="4"
                android:progressTint="@android:color/holo_orange_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_headline_game_score"
                app:setRatingBarStarNumber="@{gameScoreScreen.score}"
                tools:rating="3" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_game_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating_bar_game_score"
                app:strokeColor="?colorControlNormal"
                app:strokeWidth="0.8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_8dp">

                    <View
                        android:id="@+id/list_divider_card_view_game_result"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintBottom_toBottomOf="@id/text_headline_game_difficulty_score_screen"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/text_body_game_difficulty_score_screen" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_body_game_difficulty_score_screen"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_4dp"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:layout_marginEnd="@dimen/margin_4dp"
                        android:maxLines="2"
                        android:text="@string/game_difficulty_score_screen"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toStartOf="@id/list_divider_card_view_game_result"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_headline_game_difficulty_score_screen"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_4dp"
                        android:layout_marginBottom="@dimen/margin_8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/list_divider_card_view_game_result"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_body_game_difficulty_score_screen"
                        app:setGameDifficultyText="@{gameScoreScreen.difficultyValue}"
                        tools:text="Hard" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_body_perfect_score_score_screen"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_4dp"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:layout_marginEnd="@dimen/margin_4dp"
                        android:maxLines="2"
                        android:text="@string/perfect_scores_score_screen"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/list_divider_card_view_game_result"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_headline_perfect_scores_number_score_screen"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_4dp"
                        android:layout_marginBottom="@dimen/margin_8dp"
                        android:text="@{String.valueOf(gameScoreScreen.perfectScores)}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/list_divider_card_view_game_result"
                        app:layout_constraintTop_toBottomOf="@id/text_body_perfect_score_score_screen"
                        tools:text="6" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32dp"
                android:layout_marginBottom="@dimen/margin_32dp"
                android:contentDescription="@string/content_description_button_for_navigating_to_the_home_screen"
                android:onClick="@{() -> gameScoreScreen.navigateToWelcomeScreen()}"
                android:src="@drawable/ic_baseline_home_24"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@id/game_score_screen_banner_ad"
                app:layout_constraintEnd_toStartOf="@id/fab_play_again"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_game_result"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@color/colorFabIconTint" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_play_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32dp"
                android:layout_marginBottom="@dimen/margin_32dp"
                android:contentDescription="@string/content_description_button_for_playing_again"
                android:onClick="@{() -> gameScoreScreen.playAgain()}"
                android:src="@drawable/ic_baseline_refresh_24"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@id/game_score_screen_banner_ad"
                app:layout_constraintEnd_toStartOf="@id/fab_share"
                app:layout_constraintStart_toEndOf="@id/fab_home"
                app:layout_constraintTop_toBottomOf="@id/card_view_game_result"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@color/colorFabIconTint" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32dp"
                android:layout_marginBottom="@dimen/margin_32dp"
                android:contentDescription="@string/content_description_button_for_sharing_score"
                android:onClick="@{() -> gameScoreScreen.shareScore()}"
                android:src="@drawable/ic_share_black_24dp"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@id/game_score_screen_banner_ad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fab_play_again"
                app:layout_constraintTop_toBottomOf="@id/card_view_game_result"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@color/colorFabIconTint" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/game_score_screen_banner_ad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:adSize="SMART_BANNER"
                app:adUnitId="ca-app-pub-3940256099942544/6300978111"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>